--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "RControl Factory",
-  "short_name": "RFactory",
-  "start_url": "/",
+  "short_name": "Factory",
+  "start_url": "./",
   "display": "standalone",
-  "background_color": "#020617",
-  "theme_color": "#020617",
+  "background_color": "#0b1220",
+  "theme_color": "#0b1220",
   "icons": []
 }
