--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "RControl Factory",
-  "short_name": "RCF",
+  "short_name": "RCFactory",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#0b1220",
